--- a/chat/src/app/components/chat/chat.component.html
+++ b/chat/src/app/components/chat/chat.component.html
@@ -5,7 +5,8 @@
                 <i class="material-icons">arrow_back</i>
             </div>
             <div class="contact-avatar">
-                <img [src]="activeContact?.profilePicture" [alt]="activeContact?.name" />
+                <img [src]="activeContact?.profilePicture || '../../../assets/svgs/user.svg'"
+                    [alt]="activeContact?.name" />
             </div>
             <div class="contact-details">
                 <h3>{{ activeContact?.name }}</h3>
@@ -19,16 +20,41 @@
         </div>
     </div>
 
-    <!--<div class="messages-date">Hoy</div>-->
-    <div class="messages-date" [class.visible]="!isScrolling">
-        {{ 'HOY' }}
-    </div>
+    <span class="floating-date" *ngIf="isScrolling && currentDateDisplay">
+        {{ currentDateDisplay | uppercase }}
+    </span>
+
 
     <div *ngIf="!isPending" #messagesContainer class="messages-container" (scroll)="onScroll()">
         <div *ngFor="let message of messages; trackBy: trackByMessageId" class="message-wrapper"
             [class.outgoing]="message.to === activeContact?.id" #messageElement>
-            <div class="messages-date" #dateHeader>{{ message.timestamp | dateformat }}</div>
+            <div class="messages-date invisible-date-header" #dateHeader>{{ message.timestamp | dateformat }}</div>
             <div class="message">
+                <div class="message-options" (click)="toggleMessageOptions(message)">
+                    <i class="material-icons message-options-icon">expand_more</i>
+                    <div class="message-options-menu" [class.show]="">
+                        <div class="menu-option">
+                            <i class="material-icons">reply</i>
+                            <span>Responder</span>
+                        </div>
+                        <div class="menu-option">
+                            <i class="material-icons">forward</i>
+                            <span>Reenviar</span>
+                        </div>
+                        <div class="menu-option">
+                            <i class="material-icons">star</i>
+                            <span>Destacar</span>
+                        </div>
+                        <div class="menu-option">
+                            <i class="material-icons">content_copy</i>
+                            <span>Copiar</span>
+                        </div>
+                        <div class="menu-option delete">
+                            <i class="material-icons">delete</i>
+                            <span>Eliminar</span>
+                        </div>
+                    </div>
+                </div>
                 <div class="message-content">{{ message.content?.body }}</div>
                 <div class="message-meta">
                     <span class="message-time">{{ message.timestamp | date: 'hh:mm a' }}</span>
@@ -49,47 +75,6 @@
             </div>
         </div>-->
     </div>
-
-
-
-
-
-    <!--<div class="messages-container" #messagesContainer *ngIf="!isPending">
-        <ng-container *ngFor="let message of messages; trackBy: trackByMessageId">
-            <div *ngIf="message.to === activeContact?.id" class="message-wrapper outgoing">
-                <div class="message">
-                    <div class="message-content">{{ message.content?.body }}</div>
-                    <div class="message-meta">
-                        <span class="message-time">{{ message.timestamp | date: 'hh:mm a' }}</span>
-                        <i class="material-icons status-icon">{{ util.getStatusIcon(message.status || '') }}</i>
-                    </div>
-                </div>
-            </div>
-
-            <div *ngIf="message.to !== activeContact?.id" class="message-wrapper incoming">
-                <div class="message">
-                    <div class="message-content">{{ message.content?.body }}</div>
-                    <div class="message-meta">
-                        <span class="message-time">{{ message.timestamp | date: 'hh:mm a' }}</span>
-                        <i *ngIf="message.status" class="material-icons status-icon">{{
-                            util.getStatusIcon(message.status) }}</i>
-                    </div>
-                </div>
-            </div>
-        </ng-container>
-
-        <div *ngIf="isTyping" class="message-wrapper incoming">
-            <div class="message">
-                <div class="typing-indicator">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </div>
-        </div>
-    </div>-->
-
-
 
     <div *ngIf="isPending" class="messages-container pending-chat">
         <div class="pending-banner">
@@ -124,7 +109,7 @@
             <i class="material-icons">attach_file</i>
         </div>
         <div class="message-input" *ngIf="!isPending && !limitMessageSendPending">
-            <input type="text" placeholder="Escribe un mensaje" [(ngModel)]="message.content" [disabled]="isPending"
+            <input #messageInput type="text" placeholder="Escribe un mensaje" [(ngModel)]="message.content" [disabled]="isPending"
                 (keyup.enter)="onSendMessage()" (input)="onTyping()" />
         </div>
         <div class="send-button" (click)="onSendMessage()" *ngIf="!isPending">
