--- a/chat/src/app/components/sidebar/sidebar.component.html
+++ b/chat/src/app/components/sidebar/sidebar.component.html
@@ -39,7 +39,7 @@
 
     <div class="contacts-list">
         <div *ngFor="let contact of filteredContacts" class="contact-item"
-            [class.active]="contact.id === activeContact.id" [class.pending]="contact.status === 'pendig_acceptance'"
+            [class.active]="contact.id === activeContact?.id" [class.pending]="contact.status === 'pendig_acceptance'"
             (click)="selectContact(contact)">
             <div class="contact-avatar">
                 <img [src]="contact?.profilePicture || '../../../assets/svgs/user.svg'" [alt]="contact?.name" />
@@ -53,7 +53,7 @@
                     <p *ngIf="contact.status !== 'pendig_acceptance'">{{ contact.name }}</p>
                     <p *ngIf="contact.status === 'pendig_acceptance'" class="pending-text">Solicitud de contacto</p>
                     <div class="message-status" *ngIf="contact.status !== 'pendig_acceptance'">
-                        <span *ngIf="true" class="unread-count">{{ '2' }}</span>
+                        <span *ngIf="contact.unreadMessages > 0" class="unread-count">{{ contact.unreadMessages }}</span>
                         <i *ngIf="false" class="material-icons read-status">{{
                             getStatusIcon('active') }}</i>
                     </div>
