--- a/chat/src/app/components/chat/chat.component.css
+++ b/chat/src/app/components/chat/chat.component.css
@@ -64,7 +64,7 @@
     overflow-y: auto;
     background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyMDAiIGhlaWdodD0iMjAwIiB2aWV3Qm94PSIwIDAgMjAwIDIwMCI+CiAgPHJlY3Qgd2lkdGg9IjIwMCIgaGVpZ2h0PSIyMDAiIGZpbGw9IiNmMGYyZjUiIC8+CiAgPHBhdGggZD0iTTAgMCBMMjAwIDIwMCBNMjAwIDAgTDAgMjAwIiBzdHJva2U9IiNlYmVlZjIiIHN0cm9rZS13aWR0aD0iMSIgLz4KPC9zdmc+');
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
 }
 
 .messages-date {
@@ -93,22 +93,27 @@
     white-space: nowrap;
 }
 
-
-.floating-date {
-    position: absolute;
-    top: 72px;
+.date-badge {
     left: 50%;
     transform: translateX(-50%);
-    height: 32px;
-    width: 87px;
-    line-height: 30px;
+    height: 28px;
+    width: 78px;
     text-align: center;
-    font-size: 18px;
+    align-content: center;
+    font-size: 15px;
     background-color: var(--color-primary);
     color: var(--color-text);
     border-radius: 6px;
     pointer-events: none;
-    z-index: 10;
+}
+
+.floating-date {
+    position: absolute;
+    top: 72px;
+}
+
+.messages-date-header {
+    position: relative;
 }
 
 
@@ -165,6 +170,27 @@
     font-size: 14px;
     margin-left: 4px;
     color: #5b68f2;
+}
+
+.typing {
+    font-style: italic;
+    color: #0be70b;
+    font-weight: 500;
+    animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.6;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 .typing-indicator {
@@ -548,18 +574,18 @@
 
 
 .message-options {
-  position: absolute;
-  top: 50%;
-  right: -5px;
-  transform: translateY(-50%);
-  opacity: 0;
-  transition: opacity 0.2s ease, transform 0.3s ease;
-  z-index: 5;
+    position: absolute;
+    top: 50%;
+    right: -5px;
+    transform: translateY(-50%);
+    opacity: 0;
+    transition: opacity 0.2s ease, transform 0.3s ease;
+    z-index: 5;
 }
 
 .message-wrapper:hover .message-options {
-  opacity: 1;
-  transform: translateY(-50%) translateX(0);
+    opacity: 1;
+    transform: translateY(-50%) translateX(0);
 }
 
 
