--- a/chat/src/app/components/chat/chat.component.html
+++ b/chat/src/app/components/chat/chat.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="contact-details">
                 <h3>{{ activeContact?.name }}</h3>
-                <span class="status">{{ state }}</span>
+                <span class="status" [class.typing]="state === 'Escribiendo...'">{{ state }}</span>
             </div>
         </div>
         <div class="chat-actions">
@@ -20,63 +20,77 @@
         </div>
     </div>
 
-    <span class="floating-date" *ngIf="isScrolling && currentDateDisplay">
+    <span class="floating-date date-badge" *ngIf="isScrolling && currentDateDisplay">
         {{ currentDateDisplay | uppercase }}
     </span>
 
-
     <div *ngIf="!isPending" #messagesContainer class="messages-container" (scroll)="onScroll()">
-        <div *ngFor="let message of messages; trackBy: trackByMessageId" class="message-wrapper"
-            [class.outgoing]="message.to === activeContact?.id" #messageElement>
-            <div class="messages-date invisible-date-header" #dateHeader>{{ message.timestamp | dateformat }}</div>
-            <div class="message">
-                <div class="message-options" (click)="toggleMessageOptions(message)">
-                    <i class="material-icons message-options-icon">expand_more</i>
-                    <div class="message-options-menu" [class.show]="">
-                        <div class="menu-option">
-                            <i class="material-icons">reply</i>
-                            <span>Responder</span>
-                        </div>
-                        <div class="menu-option">
-                            <i class="material-icons">forward</i>
-                            <span>Reenviar</span>
-                        </div>
-                        <div class="menu-option">
-                            <i class="material-icons">star</i>
-                            <span>Destacar</span>
-                        </div>
-                        <div class="menu-option">
-                            <i class="material-icons">content_copy</i>
-                            <span>Copiar</span>
-                        </div>
-                        <div class="menu-option delete">
-                            <i class="material-icons">delete</i>
-                            <span>Eliminar</span>
+        <ng-container *ngFor="let group of messages">
+
+            <div class="messages-date-header date-badge" #dateHeader>
+                {{ group.date | dateformat | uppercase }}
+            </div>
+
+            <div *ngFor="let message of group.messages; trackBy: trackByMessageId" class="message-wrapper"
+                [class.outgoing]="message.to === activeContact?.id" #messageElement>
+                <div class="messages-date invisible-date-header" #dateHeader>{{ message.timestamp | dateformat }}</div>
+                <div class="message">
+                    <div class="message-options" (click)="toggleMessageOptions(message)">
+                        <i class="material-icons message-options-icon">expand_more</i>
+                        <div class="message-options-menu" [class.show]="">
+                            <div class="menu-option">
+                                <i class="material-icons">reply</i>
+                                <span>Responder</span>
+                            </div>
+                            <div class="menu-option">
+                                <i class="material-icons">forward</i>
+                                <span>Reenviar</span>
+                            </div>
+                            <div class="menu-option">
+                                <i class="material-icons">star</i>
+                                <span>Destacar</span>
+                            </div>
+                            <div class="menu-option">
+                                <i class="material-icons">content_copy</i>
+                                <span>Copiar</span>
+                            </div>
+                            <div class="menu-option delete">
+                                <i class="material-icons">delete</i>
+                                <span>Eliminar</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="message-content">{{ message.content?.body }}</div>
-                <div class="message-meta">
-                    <span class="message-time">{{ message.timestamp | date: 'hh:mm a' }}</span>
-                    <i *ngIf="true" class="material-icons status-icon">
-                        {{ util.getStatusIcon(message.status ||'')}}
-                    </i>
-                </div>
-            </div>
-        </div>
+                    <div class="message-content">
+                        {{ message.content?.body }}
+                    </div>
 
-        <!--<div *ngIf="isTyping" class="message-wrapper">
-            <div class="message">
-                <div class="typing-indicator">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <div class="message-meta">
+                        <span class="message-time">{{ message.timestamp | date: 'hh:mm a' }}</span>
+                        <i class="material-icons status-icon">
+                            {{ util.getStatusIcon(message.status || '') }}
+                        </i>
+                    </div>
                 </div>
             </div>
-        </div>-->
+        </ng-container>
     </div>
 
-    <div *ngIf="isPending" class="messages-container pending-chat">
+    <!--<div *ngIf="false" class="messages-container pending-chat">
+        <ng-container *ngFor="let group of messages">
+            <div class="messages-date-header date-badge" #dateHeader>
+                {{ group.date | dateformat | uppercase }}
+            </div>
+            <div *ngFor="let message of group.messages; trackBy: trackByMessageId" class="message-wrapper"
+                [class.outgoing]="message.to === activeContact?.id" #messageElement>
+                <div class="messages-date invisible-date-header" #dateHeader>{{ message.timestamp | dateformat }}</div>
+                <div class="message pending-message">
+                    <div class="message-content">{{ message.content.body }}</div>
+                    <div class="message-meta">
+                        <span class="message-time">{{ message.timestamp | date: 'hh:mm a'}}</span>
+                    </div>
+                </div>
+            </div>
+        </ng-container>
         <div class="pending-banner">
             <i class="material-icons">person_add</i>
             <span>{{ activeContact?.name }} te ha enviado una solicitud de contacto</span>
@@ -92,16 +106,7 @@
                 </button>
             </div>
         </div>
-
-        <div class="message-wrapper" *ngFor="let msg of messages; trackBy: trackByMessageId">
-            <div class="message pending-message">
-                <div class="message-content">{{ msg.content.body }}</div>
-                <div class="message-meta">
-                    <span class="message-time">{{ msg.timestamp | date: 'hh:mm a'}}</span>
-                </div>
-            </div>
-        </div>
-    </div>
+    </div>-->
 
     <div class="chat-input-area" [class.disabled]="isPending">
         <div class="input-actions">
@@ -109,8 +114,8 @@
             <i class="material-icons">attach_file</i>
         </div>
         <div class="message-input" *ngIf="!isPending && !limitMessageSendPending">
-            <input #messageInput type="text" placeholder="Escribe un mensaje" [(ngModel)]="message.content" [disabled]="isPending"
-                (keyup.enter)="onSendMessage()" (input)="onTyping()" />
+            <input #messageInput type="text" placeholder="Escribe un mensaje" [(ngModel)]="message.content"
+                [disabled]="isPending" (keyup.enter)="onSendMessage()" (input)="onTyping()" />
         </div>
         <div class="send-button" (click)="onSendMessage()" *ngIf="!isPending">
             <i class="material-icons">{{ newMessage ? 'send' : 'mic' }}</i>
