--- a/chat/src/app/components/sidebar/sidebar.component.html
+++ b/chat/src/app/components/sidebar/sidebar.component.html
@@ -47,10 +47,14 @@
             <div class="contact-info">
                 <div class="contact-name-time">
                     <h3>{{ contact.name }}</h3>
-                    <span class="time" [class.typing]="typingSet.has(contact.id)">{{ typingSet.has(contact.id) ? 'Escribiendo...' : (contact.lastSeen | date: 'hh:mm')}}</span>
+                    <!--<span class="time" [class.typing]="typingSet.has(contact.id)">{{ typingSet.has(contact.id) ? 'Escribiendo...' : (contact.lastSeen | date: 'hh:mm')}}</span>-->
+                    <span class="time" [class.typing]="typingSet.has(contact.id)">{{ typingSet.has(contact.id) ? 'Escribiendo...' : (contact.lastMessage?.date | date: 'hh:mm')}}</span>
                 </div>
                 <div class="contact-message-status">
-                    <p *ngIf="contact.status !== 'pendig_acceptance'">{{ contact.name }}</p>
+                    <p *ngIf="contact.status !== 'pendig_acceptance'">
+                        <i class="material-icons status-icon">{{ getStatusIcon(contact.lastMessage?.status || '') }}</i>
+                        {{ contact.lastMessage?.message }}
+                    </p>
                     <p *ngIf="contact.status === 'pendig_acceptance'" class="pending-text">Solicitud de contacto</p>
                     <div class="message-status" *ngIf="contact.status !== 'pendig_acceptance'">
                         <span *ngIf="contact.unreadMessages > 0" class="unread-count">{{ contact.unreadMessages }}</span>
