--- a/chat/src/app/components/sidebar/sidebar.component.html
+++ b/chat/src/app/components/sidebar/sidebar.component.html
@@ -18,8 +18,8 @@
             <i class="material-icons">menu</i>-->
             <i class="material-icons action-icon">group</i>
             <i class="material-icons action-icon" (click)="toggleMenu($event)">more_vert</i>
-            <app-message-options [options]="options" [showMenu]="showMenu" (optionClicked)="handleMenuAction($event)"
-                (backdropClicked)="closeMenu()"></app-message-options>
+            <!--<app-message-options [options]="options" [showMenu]="showMenu" (optionClicked)="handleMenuAction($event)"
+                (backdropClicked)="closeMenu()"></app-message-options>-->
         </div>
     </div>
 
